# prep

./: .rustfmt.toml  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.prep/: prep.toml
prep/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
prep/src/: config.rs  environment.rs  host.rs  main.rs  session.rs  toolset.rs
prep/src/cmd/: ci.rs  clippy.rs  copyright.rs  format.rs  init.rs  mod.rs
prep/src/cmd/tools/: list.rs  mod.rs
prep/src/tools/: cargo.rs  clippy.rs  mod.rs  ripgrep.rs  rustfmt.rs  rustup.rs
prep/src/ui/: help.rs  mod.rs  style.rs
