[workspace]
resolver = "3"
members = ["prep"]

[workspace.package]
version = "0.1.0"

edition = "2024"
rust-version = "1.93"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Nevermore/prep"

[workspace.lints]
rust.missing_docs = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
clap = "4.5.56"
time = "0.3.46"
