[workspace]
resolver = "3"
members = ["prep"]

[workspace.package]
version = "0.2.0"

edition = "2024"
rust-version = "1.93"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Nevermore/prep"

[workspace.lints]
rust.missing_docs = "warn"

[workspace.dependencies]
anyhow = "1.0.101"
cargo_metadata = "0.23.1"
clap = "4.5.57"
directories = "6.0.0"
regex = "1.12.3"
semver = "1.0.27"
serde = "1.0.228"
time = "0.3.47"
toml = "0.9.11"
